[fix][currie] align schema and frontend gui (#21)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,3 +106,11 @@ body {
   width: calc(100vw - 16.666667%);
   /* 48 is 12rem in Tailwind's sizing */
 }
+
+input[type="radio"]:checked {
+  accent-color: red;
+}
+
+input[type="checkbox"]:checked {
+  accent-color: red;
+}
